[appBuilder] use encrypted state to store and restore original redirect URL